--- a/html-css/form.html
+++ b/html-css/form.html
@@ -8,26 +8,31 @@
 </head>
 <body>
 <div class="container">
-<form class="contact">
-    <h2>Contact us</h2>
-    <label for="email">E-mail
-    <input type="email" placeholder="email@example.com" id="email">
-    </label>
-    <div>
-        <label for="first-name">First Name</label>
-        <input type="text" id="first-name">
-
-        <label for="last-name">Last Name</label>
-        <input type="text" id="last-name">
-    </div>
-    <h3>Tell your stories</h3>
-    <textarea></textarea>
-    <div>
-        <input type="checkbox" id="subscribe">
-        <label for="subscribe">Subscribe</label>
-        <input type="submit" value="Send">
-    </div>
-</form>
+    <form class="contact">
+        <h2>Contact us</h2>
+        <label for="email">E-mail
+            <input type="email" placeholder="email@example.com" id="email">
+        </label>
+        <div class="left-box">
+            <label for="first-name">First Name</label>
+            <input type="text" id="first-name">
+        </div>
+        <div class="right-box">
+            <label for="last-name">Last Name</label>
+            <input type="text" id="last-name">
+        </div>
+        <div class="clear"></div>
+        <label for="about">Tell Your stories</label>
+        <input type="text" id="about">
+        <div class="left-box">
+            <input type="checkbox" id="subscribe">
+            <label for="subscribe">Subscribe</label>
+        </div>
+        <div class="right-box">
+            <input type="submit" value="Send">
+        </div>
+        <div class="clear"></div>
+    </form>
 </div>
 
 </body>
