transition and responsive

--- a/html-css/0908.html
+++ b/html-css/0908.html
@@ -10,33 +10,39 @@
 
 <div class="box-container bg-grey">
     <div class="box">
-        <div style="position:relative">
+        <div style="position:relative" class="image-container">
             <div class="overlay"></div>
             <img src="assets/product1-1.jpg">
         </div>
     </div>
     <div class="box">
-        <div style="position:relative">
+        <div style="position:relative" class="image-container">
             <div class="overlay"></div>
             <img src="assets/product1-1.jpg">
         </div>
     </div>
     <div class="box">
-        <div style="position:relative">
+        <div style="position:relative" class="image-container">
             <div class="overlay"></div>
             <img src="assets/product1-1.jpg">
         </div>
     </div>
     <div class="box">
-        <div style="position:relative">
+        <div style="position:relative" class="image-container">
             <div class="overlay"></div>
             <img src="assets/product1-1.jpg">
         </div>
     </div>
     <div class="box">
-        <div style="position:relative">
+        <div style="position:relative" class="image-container">
             <div class="overlay"></div>
             <img src="assets/product1-1.jpg">
+        </div>
+    </div>
+    <div class="box another">
+        <div style="position:relative; overflow: hidden">
+            <div class="slide"><span>156$</span></div>
+            <img src="assets/product2.jpg">
         </div>
     </div>
     <div style="clear: both"></div>
